# cpp-ot

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile
include/open-telemetry/trace/: span-context.h  span.h  trace-c.h  tracer.h
include/trace/: span-context.h  span.h  tracer.h
src/: open-telemetry.cc
src/trace/: span-context.cc  span-context.cpp  span.cc  span.cpp  trace-c.cc  tracer.cc  tracer.cpp
test/: CMakeLists.txt  span-context_unittest.cc  span_unittest.cc  tracer_unittest.cc
